[package]
name = "api_sinyal_trading"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "bigdecimal"] }
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15"
bigdecimal = { version = "0.4", features = ["serde"] }
